--- a/app/templates/index.tmpl
+++ b/app/templates/index.tmpl
@@ -1,8 +1,16 @@
 <html>
   <head>
-    <title>{{ get_title() }} - {{ format_price(1.23) }} - TaskTrack</title>
+    <title>{{ get_title() }} - {{ format_version('1.2.3') }}</title>
   </head>
   <body>
-    <h1>Uh huh huh. You said, "{{ user.nickname }}".</h1>
+    <h1>{{ get_title() }}
+    <h2>You are logged in as {{ user.nickname }}.</h2>
+    <p>Integration coming soon:
+    <ul>
+      <li>React.js</li>
+      <li>require.js</li>
+      <li>almond.js</li>
+      <li>Flask-Assets</li>
+    </ul> 
   </body>
 </html>
